--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -4,7 +4,7 @@
     color: #F9F5D7;
     box-shadow: none;
     border: none;
-    font-family: "Mononoki Nerd Font", "Fira Code", monospace;
+    font-family: "RobotoMono Nerd Font", "Fira Code", monospace;
     font-size: 14px;
 }
 
