--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,18 +1,73 @@
 #waybar {
-	font-family: "RobotoMono Nerd Font", monospace;
-	font-size: 13;
-	background-color: rgba(10, 9, 32, 0.5);
-	box-shadow: 0 0px 10px rgba(0, 0, 0, 0.6);
-	border-radius: 6px;
-	color: #9AAAE5;
-}	
+  min-height: 0;
+	font-family: "Roboto Mono Nerd Font", monospace;
+  font-weight: bold;
+	font-size: 13px;
+	background-color: rgba(35, 37, 90, 0.2);
+  border: solid 2px;
+  border-radius: 25px;
+	color: #F768A3;
+}
+
+window#waybar.empty #window {
+    padding: 0px;
+    margin: 0px;
+    background-color: transparent;
+}
 
 #tray {
-	color: #9AAAE5;
+	color: #000000;
+  background-color: #9AAAE5;
+  border-radius: 25px;
+  padding: 5px;
+  margin: 5px;
 }
 
-#workspaces button {
-	color: #9AAAE5;
+#workspaces {
+  padding-left: 8px; 
+  font-size: 14px;
+  color: #13133A;
+  border-radius: 20px;
+}
+
+#workspaces button.active {
+  color: #F768A3;
+}
+
+.modules-center {
+  color: #13133A;
+  background-color: #F768A3;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 16px;
+  margin: 5px;
 }
 
 
+
+.modules-right {
+  color: #9AAAE5;
+}
+
+#network,
+#pulseaudio,
+#backlight,
+#memory,
+#termperature,
+#battery {
+  padding-right: 8px;
+}
+
+#clock {
+  background-color: #258FC4;
+  color: #13133A; 
+  margin: 5px;
+  padding-right: 6px;
+  padding-left: 6px;
+  border-radius: 50px;
+}
+
+#custom-power {
+  padding-right: 16px;
+  color: #F768A3;
+}
