--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -4,9 +4,8 @@
   font-weight: bold;
 	font-size: 13px;
 	background-color: rgba(35, 37, 90, 0.2);
-  border: solid 2px;
-  border-radius: 25px;
-	color: #F768A3;
+  border-bottom: solid 1px;
+	color: rgba(247, 104, 163, 0.2);
 }
 
 window#waybar.empty #window {
