refactor: ditching hyprland for mangowc

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -46,7 +46,7 @@ tooltip label {
   color: #F768A3;
 }
 
-.modules-center {
+#window {
   color: #13133A;
   background-color: #F768A3;
   padding-left: 5px;
