--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -47,7 +47,7 @@ tooltip label {
   color: #e6d300;
 }
 
-.modules-center {
+#window {
   color: #2a2619;
   background-color: #fefbe9;
   padding-left: 5px;
@@ -55,11 +55,10 @@ tooltip label {
   border-radius: 16px;
   margin: 5px;
 } 
-window#waybar.empty .modules-center {
+
+#window #waybar.empty{
     background-color: transparent;
 }
-
-
 
 .modules-right {
   color: #dcd3a1;
