--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -23,7 +23,7 @@ tooltip {
 }
 tooltip label {
   font-family: "Roboto Mono", monospace;
-  color: #fefbe9;
+  color: #f0e68c;
 }
 
 #tray {
@@ -49,7 +49,7 @@ tooltip label {
 
 #window {
   color: #2a2619;
-  background-color: #fefbe9;
+  background-color: #f0e68c;
   padding-left: 5px;
   padding-right: 5px;
   border-radius: 16px;
